updated mobile version

--- a/index.html
+++ b/index.html
@@ -13,35 +13,54 @@
     </header>
     <main>
       <section>
-        <div class="main-title">
-          <a href="/pages/resume.html" class="skills-text">
-            <h1>i am genny allison</h1>
-          </a>
-        </div>
-        <div class="animation-container">
-          <div class="design-container">      
-            <div class="designer-box">
-              <a href="/pages/skills.html">
-                <h2>designer</h2>
-                <h3 class="element-to-hide768">web design specializing in UI/UX design</h3>
-              </a>  
-            </div> 
-            <div class="headshot-container">
-              <img class="headshot" src="/img/headshot-nobackground.png" alt="Headshot">
-              <img class="headshot-animated" src="/img/headshot-animation.png" alt="Animated Headshot">
-            </div>  
-            <div class="coder-container">
-              <div class="coder-box">
-                <a href="/pages/portfolio.html">
-                  <h2> &lt; coder &gt; </h2>
-                  <h3 class="element-to-hide768">crafting functional, responsive code for seamless user experiences</h3>   
-                </a>
-              </div>           
-              <div class="code-img">
-                <img src="/img/code-nobackground.png">
+        <div class="desktop-version">
+          <div class="main-title">
+            <a href="/pages/resume.html" class="skills-text">
+              <h1>i am genny allison</h1>
+            </a>
+          </div>
+          <div class="animation-container">
+            <div class="design-container">      
+              <div class="designer-box">
+                <a href="/pages/skills.html">
+                  <h2>designer</h2>
+                  <h3 class="element-to-hide768">web design specializing in UI/UX design</h3>
+                </a>  
+              </div> 
+              <div class="headshot-container">
+                <img class="headshot" src="/img/headshot-nobackground.png" alt="Headshot">
+                <img class="headshot-animated" src="/img/headshot-animation.png" alt="Animated Headshot">
               </div>  
-            </div> 
-          </div>  
+              <div class="coder-container">
+                <div class="coder-box">
+                  <a href="/pages/portfolio.html">
+                    <h2> &lt; coder &gt; </h2>
+                    <h3 class="element-to-hide768">crafting functional, responsive code for seamless user experiences</h3>   
+                  </a>
+                </div>           
+                <div class="code-img">
+                  <img src="/img/code-nobackground.png" alt="" load="lazy">
+                </div>  
+              </div> 
+            </div>  
+          </div>
+        </div>
+        <!-- Mobile Version -->
+        <div class="mobile-version hidden">
+            <div class="main-title">
+                <h1>i am genny allison</h1>
+            </div>
+            <div class="designer-box">
+                <h2>i am a designer</h2>
+                <h3>UI/UX design expert</h3>
+            </div>
+            <div class="coder-box">
+                <h2>&lt; i am a coder &gt;</h2>
+                <h3>Functional, responsive code</h3>
+            </div>
+             <div class="headshot-container">
+                <img class="headshot" src="/img/headshot-animation.png" alt="Headshot">
+            </div>           
         </div>
       </section>
       <section>
