adjusted mobile version

--- a/index.html
+++ b/index.html
@@ -50,13 +50,15 @@
             <div class="main-title">
                 <h1>i am genny allison</h1>
             </div>
-            <div class="designer-box">
-                <h2>i am a designer</h2>
-                <h3>UI/UX design expert</h3>
-            </div>
-            <div class="coder-box">
-                <h2>&lt; i am a coder &gt;</h2>
-                <h3>Functional, responsive code</h3>
+            <div class="textbox">
+              <div class="designer-box">
+                  <h2>i am a designer</h2>
+                  <h3>UI/UX design expert</h3>
+              </div>
+              <div class="coder-box">
+                  <h2>&lt; i am a coder &gt;</h2>
+                  <h3>Functional, responsive code</h3>
+              </div>
             </div>
              <div class="headshot-container">
                 <img class="headshot" src="/img/headshot-animation.png" alt="Headshot">
