added meta descriptions

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Genny Allison | Front End Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover Genny Allison's technical and creative skills, from responsive web design and front-end development to UI/UX, graphic design, and coding languages. This skills showcase reflects a blend of artistic imagination and technical expertise, supporting a seamless, user-focused digital experience." />
     <link class="tab-logo" rel="icon" href="/img/white_favicon/favicon.ico" type="image/icon type">
     <link rel="stylesheet" href="/styles.css">
     <link href="https://fonts.cdnfonts.com/css/tt-norms-pro" rel="stylesheet">
