--- a/pages/about.html
+++ b/pages/about.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Genny Allison | Front End Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Learn more about Genny Allison, a Full Stack Developer blending technical expertise with creativity. With a unique background in design, business, and web development, Genny crafts responsive, user-friendly websites and applications that enhance digital experiences. Explore her journey, skills, and dedication to impactful technology solutions." />
+
     <link class="tab-logo" rel="icon" href="/img/white_favicon/favicon.ico" type="image/icon type">
     <link rel="stylesheet" href="/styles.css" />
     <link href="https://fonts.cdnfonts.com/css/tt-norms-pro" rel="stylesheet">
