--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Genny Allison | Front End Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Connect with Genny Allison, front-end developer at Allison Stock Inc., for web design and UI/UX collaborations or inquiries. Reach out via email or phone, or download Genny's resume to learn more about her skills and experience." />
     <link class="tab-logo" rel="icon" href="/img/white_favicon/favicon.ico" type="image/icon type">    
     <link rel="stylesheet" href="/styles.css">
     <link href="https://fonts.cdnfonts.com/css/tt-norms-pro" rel="stylesheet">
