--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Genny Allison | Front End Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions. Discover the blend of artistry and functionality across a range of digital creations." />
     <link class="tab-logo" rel="icon" href="/img/white_favicon/favicon.ico" type="image/icon type">
     <link rel="stylesheet" href="/styles.css">
     <link href="https://fonts.cdnfonts.com/css/tt-norms-pro" rel="stylesheet">
