--- a/pages/resume.html
+++ b/pages/resume.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Genny Allison | Front End Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore Genny Allison's professional resume, showcasing a blend of technical expertise, creative design, and business acumen. With a strong foundation in Full Stack Development, UI/UX design, and project management, Genny crafts user-focused digital experiences. Discover her career achievements, education, and skills in web development." />
+
     <link class="tab-logo" rel="icon" href="/img/white_favicon/favicon.ico" type="image/icon type">
     <link rel="stylesheet" href="/styles.css">
     <link href="https://fonts.cdnfonts.com/css/tt-norms-pro" rel="stylesheet">
