after going live the live mobile version is very different than the developer mode, making adjustments for mobile view.

--- a/pages/about.html
+++ b/pages/about.html
@@ -63,7 +63,7 @@
                       <img src="/img/baseball-icon.png">
                       <p>baseball & hockey</p>
                     </div>
-                    <div class="favorites">
+                    <div class="favorites books">
                       <img src="/img/book-icon.png">
                       <p>books</p>
                     </div>
@@ -81,16 +81,16 @@
                 </div>
                 <div class="fun-facts">
                   <div class="facts">
-                    <div><img src="/img/circle-checkmark.png"></div>
+                    <div class="check-mark"><img src="/img/circle-checkmark.png"></div>
                     <div><p>I have been married for 22 years and I am a mother of 3. Ages 22, 16, and 10.</p></div>
                     
                   </div>
                   <div class="facts">
-                    <div><img src="/img/circle-checkmark.png"></div>
+                    <div class="check-mark"><img src="/img/circle-checkmark.png"></div>
                     <div><p>When I’m not at my computer I am at a baseball field watching my son play baseball.</p></div>
                   </div>
                   <div class="facts">
-                    <div><img src="/img/circle-checkmark.png"></div>
+                    <div class="check-mark"><img src="/img/circle-checkmark.png"></div>
                     <div><p>I have 2 Golden Retrievers named Ruby and Harley Davidson.</p></div>
                   </div>
                 </div>
