--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Genny Allison | Front End Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Explore the portfolio of Genny Allison, a front-end developer focused on crafting responsive, user-centered web experiences. Specializing in UI/UX design and functional coding, Genny brings seamless design and development together for an engaging digital presence.">
     <link class="tab-logo" rel="icon" href="/img/white_favicon/favicon.ico" type="image/icon type">
     <link rel="stylesheet" href="/styles.css" />
   </head>
