completely updated site, added new projects

--- a/assets/nav.html
+++ b/assets/nav.html
@@ -6,23 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link class="tab-logo" rel="icon" href="/img/white_favicon/favicon.ico" type="image/icon type">
     <link rel="stylesheet" href="/styles.css" />
-    <script src="/designer.js"></script>
+    <script src="/assets/script.js"></script>
   
   </head>
   <body>
     <header>
-      <nav id="nav">
+      <nav>
         <div class="nav-logo">
-          <img src="/img/allisonstock-logo.png" alt="Logo for Allison Stock Inc">
+          <a href="/index.html">
+            <img src="/img/allisonstock-logo.png" alt="Logo for Allison Stock Inc">
+          </a>
         </div>
+        <div class="menu-toggle">☰</div>
+        <!-- Top Navigation Links -->
         <div class="nav-links">
           <ul>
-            <li><a href="/index.html" class="links">my home</a></li>           
-            <li><a href="/pages/about.html" class="links">about me</a></li>
-            <li><a href="/pages/skills.html" class="links">my skills</a></li>
-            <li><a href="/pages/resume.html" class="links">my resume</a></li>
-            <li><a href="/pages/portfolio.html" class="links">my work</a></li> 
-            <li><a href="/pages/contact.html" class="links">contact me</a></li>
+            <li><a href="/index.html" class="links">My Home</a></li>
+            <li><a href="/pages/about.html" class="links">About Me</a></li>
+            <li><a href="/pages/skills.html" class="links">My Skills</a></li>
+            <li><a href="/pages/resume.html" class="links">My Resume</a></li>
+            <li><a href="/pages/collections.html" class="links">My Work</a></li>
+            <li><a href="/pages/contact.html" class="links">Contact Me</a></li>
+          </ul>
+        </div>
+        <!-- Hamburger Menu Links -->
+        <div class="hamburger-nav-links">
+          <ul>
+            <li><a href="/index.html" class="links">My Home</a></li>
+            <li><a href="/pages/about.html" class="links">About Me</a></li>
+            <li><a href="/pages/skills.html" class="links">My Skills</a></li>
+            <li><a href="/pages/resume.html" class="links">My Resume</a></li>
+            <li><a href="/pages/collections.html" class="links">My Work</a></li>
+            <li><a href="/pages/contact.html" class="links">Contact Me</a></li>
           </ul>
         </div>
       </nav>
