--- a/pages/about.html
+++ b/pages/about.html
@@ -76,7 +76,7 @@
                 </div>
               </div>
               <div class="fun-facts-grid">
-                <div class="sub-labels">
+                <div class="sub-labels favorites-label">
                   <h3>fun facts</h3>
                 </div>
                 <div class="fun-facts">
@@ -95,6 +95,26 @@
                   </div>
                 </div>
               </div>
+                        <article class="resume-border">
+              <div>
+                <div class="author-bio">
+                  <img
+                    src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1500/v1742999496/genny_allison_portfolio_jgvlzh.png"
+                      alt="Photo of Genny Allison, the web developer and AI content specialist"
+                      type="image/avif"
+                      width="425"
+                      height="auto"
+                      aspect-ratio="2.0769";
+                  />
+                  <div class="author-bio-text ">
+                      <h2>Partner with an AI Content Specialist & Web Developer</h2>
+                    <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
+                    <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
+                    <p><a href="https://www.linkedin.com/in/genny-allison/" target="_blank" rel="noopener noreferrer" aria-label="Visit Genny Allison's LinkedIn on a new tab">Connect with me on LinkedIn</a> or <a href="https://gennyallison.netlify.app" target="_blank" rel="noopener noreferrer" aria-label="Visit Genny Allison's professional portfolio on a new tab">explore my portfolio</a> to see how I can help bring your vision to life.</p>
+                  </div>
+                </div>
+              </div>
+            </article>
             </div>
           </div> 
       </section>               
