--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,10 +36,11 @@
               </div>  
             </div>
             <article class="resume-border"> 
-              <div>
+              <div id="contact-info">
                 <div class="resume-summary">
                   <p>Feel free to reach out to me for any web design and UI/UX inquiries, collaborations, or just to connect!</p>
                   <h3>Genny Allison</h3>
+                  <p>Linked In <a href="www.linkedin.com/in/genny-allison">www.linkedin.com/in/genny-allison</a></p>
                   <p>Phone: <a href="tel:+13252627085">(325) 262-7085</phone></p>
                   <p>Email: <a href="">allisonstockinc@gmail.com</a></p>
                   <p>Kindly refrain from unsolicited calls. If I'm unavailable, please leave a message, and I will return your call at my earliest convenience.</p>
