--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -17,7 +17,7 @@
     <header>
           <div class="canvas-skills-grid">
             <div class="canvas-skills-img">
-              <img src="/img/designerImages/girlPaintingCodes.png">
+              <img src="/img/girlCoding.png">
             </div>
             <div class="canvas-skills-title">
               <h1>a canvas of code:</h1>
@@ -45,68 +45,98 @@
         <!--resume-->        
       <div class="black-container">
         <div>
-          <div class="resume resume-date .greetings-label resume-border">
-            <div id="project1">
-              <h2>project 1 | sports tube</h2>
-            </div>  
-          </div>
-          <article class="resume-border"> 
-            <div class="project-images">
+          <section id="project1">
+            <div class="resume resume-date .greetings-label resume-border">
+                <h2>project 1 | Tech Trends</h2>
+            </div>
+            <div class="project-images resume-border">
+              <img src="/img/tech-trends.png">
+            </div>
+            <article class="resume-border">  
+              <div>
+                <div class="resume-summary">
+                  <p>Tech Trends is an innovative blog platform dedicated to exploring and showcasing the latest advancements in technology, tools, and trends. Designed with a futuristic aesthetic, the site provides a seamless and engaging experience for tech enthusiasts to explore articles on <strong>AI</strong>, <strong>IoT</strong>, <strong>eCommerce</strong> and more. The layout was thoughtfully crafted to prioritize usability and accessibility, ensuring that content is easy to navigate and visually appealing across all devices.
+
+                  To create Tech Trends, a combination of <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>, and <strong>Netlify</strong> hosting was used to ensure a responsive and high-performing design. The visuals were uniquely developed using <strong>Midjourney</strong>, <strong>Canva</strong>, and <strong>Photoshop</strong>, resulting in a cohesive and professional look that aligns with the blog's forward-thinking theme. Extensive <strong>SEO Optimization</strong> was implemented using tools like Google Search Console, Ahrefs, SEMrush, and performance testing through PageSpeed Insights, achieving outstanding scores on mobile and desktop.
+
+                  Tech Trends is a testament to the collaboration of cutting-edge tools and creative instincts, offering a user-friendly and visually striking platform where technology meets exceptional design and functionality.</p>
+                </div>
+                <div class="project-links">
+                  <div>
+                    <h3>take me to the </h3>
+                  </div>
+                  <div class="button-grid">
+                    <div class="click-me">
+                      <a href="https://tech-trends-blog.netlify.app">project</a>
+                    </div>
+                    <div class="click-me">  
+                      <a href="https://github.com/Allison2002/tech-trends.git" links>&lt; code &gt;</a>
+                    </div>
+                  </div>  
+                </div>
+              </div>  
+            </article> 
+          </section>
+          <section id="project2">
+            <div class="resume resume-date .greetings-label resume-border">
+                <h2>project 2 | sports tube</h2>
+            </div>
+            <div class="project-images resume-border">
               <img src="/img/project screenshots/sports-tube.png">
             </div>
-          </article>
-          <article class="resume-border">  
-            <div>
-              <div class="resume-summary">
-                <p>Sports Tube is a dynamic platform designed for sports enthusiasts to explore and enjoy a variety of sports-related videos and articles. The project was crafted with a focus on a clean, modern aesthetic, ensuring that users can easily navigate the site and find the content that interests them. The layout and interface were carefully planned to prioritize user experience, making it accessible and visually engaging across all devices.</p>
-                <p>To bring this vision to life, a combination of <strong>HTML, CSS, Figma,</strong> and <strong>JavaScript</strong> was used to build a <strong>responsive</strong> and <Strong>interactive design</Strong>. Custom graphics were created using <strong>Midjourney, Photoshop</strong> and <strong>Canva</strong>, adding a unique, professional touch to the site’s visuals and enhancing its overall branding. The site is hosted on Netlify, which ensures fast load times and reliable performance for users. With Sports Tube, users can seamlessly browse through sports content in a visually appealing and user-friendly environment, reflecting a commitment to quality in both design and functionality.</p>
-              </div>
-              <div class="project-links">
-                <div>
-                  <h3>take me to the </h3>
+            <article class="resume-border">  
+              <div>
+                <div class="resume-summary">
+                  <p>Sports Tube is a dynamic platform designed for sports enthusiasts to explore and enjoy a variety of sports-related videos and articles. The project was crafted with a focus on a clean, modern aesthetic, ensuring that users can easily navigate the site and find the content that interests them. The layout and interface were carefully planned to prioritize user experience, making it accessible and visually engaging across all devices.</p>
+                  <p>To bring this vision to life, a combination of <strong>HTML, CSS, Figma,</strong> and <strong>JavaScript</strong> was used to build a <strong>responsive</strong> and <Strong>interactive design</Strong>. Custom graphics were created using <strong>Midjourney, Photoshop</strong> and <strong>Canva</strong>, adding a unique, professional touch to the site’s visuals and enhancing its overall branding. The site is hosted on Netlify, which ensures fast load times and reliable performance for users. With Sports Tube, users can seamlessly browse through sports content in a visually appealing and user-friendly environment, reflecting a commitment to quality in both design and functionality.</p>
                 </div>
-                <div class="button-grid">
-                  <div class="click-me">
-                    <a href="https://sports-tube.netlify.app">project</a>
+                <div class="project-links">
+                  <div>
+                    <h3>take me to the </h3>
                   </div>
-                  <div class="click-me">  
-                    <a href="https://github.com/Allison2002/sports-tube.git" links>&lt; code &gt;</a>
-                  </div>
-                </div>  
-              </div>
-            </div>  
-          </article> 
-         <div class="resume resume-date .greetings-label resume-border project">
-            <div id="project2">
-              <h2>project 2 | sports tube community</h2>
-            </div>  
-          </div>
-          <article class="resume-border"> 
-            <div class="project-images" id="project1">
-              <img src="/img/project screenshots/sports-tube-community.png">
+                  <div class="button-grid">
+                    <div class="click-me">
+                      <a href="https://sports-tube.netlify.app">project</a>
+                    </div>
+                    <div class="click-me">  
+                      <a href="https://github.com/Allison2002/sports-tube.git" links>&lt; code &gt;</a>
+                    </div>
+                  </div>  
+                </div>
+              </div>  
+            </article> 
+          </section> 
+          <section id="project3">
+            <div class="resume resume-date .greetings-label resume-border project">
+                <h2>project 3 | sports tube community</h2>
             </div>
-          </article>
-          <article class="resume-border">  
-            <div>
-              <div class="resume-summary">
-                <p>Sports Tube Community is an engaging blog platform designed to complement the Sports Tube video site, providing a space for sports enthusiasts to explore in-depth articles and discussions about a wide range of sports. The site focuses on delivering a visually appealing and user-centered experience, with a clean, modern layout that makes reading and navigation intuitive.</p>
-                <p>The design was created using <strong>Figma</strong> to plan the interface, while <strong>Photoshop</strong> and <strong>Canva</strong> were used to enhance visuals and create custom graphics. <strong>Midjourney</strong> was employed for creative inspiration, bringing unique elements to the design. Built with a strong emphasis on <strong>UI/UX</strong> principles, the site is both <strong>responsive</strong> and accessible across devices. Hosted on <strong>Netlify</strong>, Sports Tube Community is a reliable and fast-performing platform, inviting users to dive deeper into sports through a well-organized and immersive experience./p>
+            <article class="resume-border"> 
+              <div class="project-images" id="project1">
+                <img src="/img/project screenshots/sports-tube-community.png">
               </div>
-              <div class="project-links">
-                <div>
-                  <h3>take me to the </h3>
+            </article>
+            <article class="resume-border">  
+              <div>
+                <div class="resume-summary">
+                  <p>Sports Tube Community is an engaging blog platform designed to complement the Sports Tube video site, providing a space for sports enthusiasts to explore in-depth articles and discussions about a wide range of sports. The site focuses on delivering a visually appealing and user-centered experience, with a clean, modern layout that makes reading and navigation intuitive.</p>
+                  <p>The design was created using <strong>Figma</strong> to plan the interface, while <strong>Photoshop</strong> and <strong>Canva</strong> were used to enhance visuals and create custom graphics. <strong>Midjourney</strong> was employed for creative inspiration, bringing unique elements to the design. Built with a strong emphasis on <strong>UI/UX</strong> principles, the site is both <strong>responsive</strong> and accessible across devices. Hosted on <strong>Netlify</strong>, Sports Tube Community is a reliable and fast-performing platform, inviting users to dive deeper into sports through a well-organized and immersive experience./p>
                 </div>
-                <div class="button-grid">
-                  <div class="click-me">
-                    <a href="https://sports-tube-community.netlify.app">project</a>
+                <div class="project-links">
+                  <div>
+                    <h3>take me to the </h3>
                   </div>
-                  <div class="click-me">  
-                    <a href="https://github.com/Allison2002/sports_tube_community.git" links>&lt; code &gt;</a>
-                  </div>
-                </div>  
-              </div>
-            </div>  
-          </article>   
+                  <div class="button-grid">
+                    <div class="click-me">
+                      <a href="https://sports-tube-community.netlify.app">project</a>
+                    </div>
+                    <div class="click-me">  
+                      <a href="https://github.com/Allison2002/sports_tube_community.git" links>&lt; code &gt;</a>
+                    </div>
+                  </div>  
+                </div>
+              </div>  
+            </article>
+          </section> 
           <div class="resume resume-date .greetings-label resume-border project">
             <div id="project3">
               <h2>project 3 | texas remodelers</h2>
@@ -233,13 +263,12 @@
           </article>  
         </div>  
       </div>
-      <button id="backToTopBtn" title="Go to top">back to top</button> 
     </main>
-      <div class="back-to-top">
-        <button id="back-to-top" onclick="scrollToTop()">back to top</button>
-      </div> 
-      <div id="footer"></div>   
-      <script src="/assets/script.js"></script>
+    <div class="back-to-top">
+      <button id="back-to-top" onclick="scrollToTop()">back to top</button>
+    </div> 
+    <div id="footer"></div>   
+    <script src="/assets/script.js"></script>
   </body>
 </html>      
       
